--- a/index.html
+++ b/index.html
@@ -2,91 +2,84 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cardano DeFi Hub - ORACLE</title>
+    <title>Cardano Live Dashboard</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         :root { --bg: #0a0f1e; --card: #161e35; --accent: #3b82f6; --text: #f8fafc; }
-        body { background-color: var(--bg); color: var(--text); font-family: sans-serif; margin: 0; padding: 20px; }
-        .container { max-width: 1000px; margin: auto; }
-        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; margin-bottom: 30px; }
-        .card { background: var(--card); padding: 20px; border-radius: 15px; border: 1px solid #2d3748; }
-        .price { font-size: 1.8rem; font-weight: bold; color: #60a5fa; }
-        .liquidity { font-size: 1rem; color: #10b981; margin-top: 5px; }
-        .badge { display: inline-block; padding: 4px 8px; border-radius: 5px; font-size: 0.7rem; background: #1e293b; margin-bottom: 10px; }
-        h1 { text-align: center; color: #3b82f6; }
+        body { background-color: var(--bg); color: var(--text); font-family: sans-serif; padding: 20px; text-align: center; }
+        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; max-width: 900px; margin: 20px auto; }
+        .card { background: var(--card); padding: 25px; border-radius: 15px; border: 1px solid #2d3748; transition: 0.3s; }
+        .card:hover { border-color: var(--accent); }
+        .price { font-size: 2rem; font-weight: bold; color: #60a5fa; margin: 10px 0; }
+        .badge { background: #1e293b; padding: 5px 10px; border-radius: 5px; font-size: 0.8rem; }
     </style>
 </head>
 <body>
 
-<div class="container">
-    <h1>Cardano Live: ORACLE & VLRM</h1>
+    <h1>Cardano Ecosystem Monitor</h1>
+
     <div class="grid">
         <div class="card">
-            <span class="badge">MINSWAP</span>
-            <h3>ORACLE / ADA</h3>
-            <div id="price-oracle-min" class="price">Buscando...</div>
-            <div id="liq-oracle-min" class="liquidity">Liq: --</div>
+            <span class="badge">TOKEN</span>
+            <h3>ORACLE</h3>
+            <div id="price-oracle" class="price">Cargando...</div>
+            <div id="status-oracle">Conectando con la red...</div>
         </div>
 
         <div class="card">
-            <span class="badge">VYFI</span>
-            <h3>ORACLE / ADA</h3>
-            <div id="price-oracle-vyfi" class="price">Buscando...</div>
-            <div id="liq-oracle-vyfi" class="liquidity">Liq: --</div>
-        </div>
-
-        <div class="card">
-            <span class="badge">VYFI</span>
-            <h3>VLRM / ORACLE</h3>
-            <div id="price-vlrm-vyfi" class="price">Buscando...</div>
-            <div id="liq-vlrm-vyfi" class="liquidity">Liq: --</div>
+            <span class="badge">TOKEN</span>
+            <h3>VLRM</h3>
+            <div id="price-vlrm" class="price">Cargando...</div>
+            <div id="status-vlrm">Conectando con la red...</div>
         </div>
     </div>
 
-    <div style="background: var(--card); padding: 20px; border-radius: 15px; height: 300px;">
-        <h3>Tendencia de TVL (Histórico)</h3>
-        <canvas id="tvlChart"></canvas>
+    <div style="max-width:900px; margin: auto; background: var(--card); padding: 20px; border-radius: 15px;">
+        <canvas id="miniChart" height="100"></canvas>
     </div>
-</div>
 
 <script>
-    // IDs de pools reales en Cardano (GeckoTerminal format)
-    const pools = [
-        { id: "cardano_minswap_be44e11400e2b4f2c5d6c8112316e6d7729114f85e4e69b5523a1a9e", priceId: "price-oracle-min", liqId: "liq-oracle-min" },
-        { id: "cardano_vyfi_166ad937203b1ca4eb04c35588373b9e4a323984534e69b5523a1a9e", priceId: "price-oracle-vyfi", liqId: "liq-oracle-vyfi" },
-        { id: "cardano_vyfi_566ad937203b1ca4eb04c35588373b9e4a323984534e69b5523a1a9f", priceId: "price-vlrm-vyfi", liqId: "liq-vlrm-vyfi" }
-    ];
+    // Usaremos GeckoTerminal que no requiere llaves y es muy estable para Cardano
+    async function fetchPrices() {
+        try {
+            // Dirección de red de Cardano en GeckoTerminal + Policy IDs
+            const url = "https://api.geckoterminal.com/api/v2/networks/cardano/tokens/multi/fb3b359f1498b8120364d2621415dfb0e258673a5a8e029307c08882%2C682bc8159f80a47f2010887e0767228a4740e53f19159981881a547d";
+            
+            const response = await fetch(url);
+            const result = await response.json();
+            const tokens = result.data;
 
-    async function actualizar() {
-        for (const pool of pools) {
-            try {
-                const res = await fetch(`https://api.geckoterminal.com/api/v2/networks/cardano/pools/${pool.id}`);
-                const json = await res.json();
-                const data = json.data.attributes;
-
-                document.getElementById(pool.priceId).innerText = "$" + parseFloat(data.base_token_price_usd).toFixed(6);
-                document.getElementById(pool.liqId).innerText = "Liq: $" + Math.round(data.reserve_in_usd).toLocaleString();
-            } catch (e) {
-                document.getElementById(pool.priceId).innerText = "Error API";
-                console.error(e);
-            }
+            tokens.forEach(token => {
+                const price = parseFloat(token.attributes.price_usd).toFixed(5);
+                const volume = token.attributes.volume_usd.h24;
+                
+                if(token.attributes.address.includes('fb3b35')) { // ORACLE
+                    document.getElementById('price-oracle').innerText = "$" + price;
+                    document.getElementById('status-oracle').innerText = "Vol 24h: $" + Math.round(volume).toLocaleString();
+                } else { // VLRM
+                    document.getElementById('price-vlrm').innerText = "$" + price;
+                    document.getElementById('status-vlrm').innerText = "Vol 24h: $" + Math.round(volume).toLocaleString();
+                }
+            });
+        } catch (error) {
+            console.error(error);
+            document.getElementById('status-oracle').innerText = "Reintentando conexión...";
         }
     }
 
-    // Gráfica con datos reales de la API (Simulando tendencia para visualización)
-    const ctx = document.getElementById('tvlChart').getContext('2d');
+    // Gráfica visual sencilla
+    const ctx = document.getElementById('miniChart').getContext('2d');
     new Chart(ctx, {
         type: 'line',
         data: {
-            labels: ['Lun', 'Mar', 'Mie', 'Jue', 'Vie', 'Sab', 'Dom'],
-            datasets: [{ label: 'Liquidez Total', data: [450000, 480000, 470000, 510000, 540000, 530000, 580000], borderColor: '#3b82f6', tension: 0.3 }]
+            labels: ['1h', '2h', '3h', '4h', '5h', '6h'],
+            datasets: [{ label: 'Actividad de Red', data: [10, 25, 15, 30, 45, 40], borderColor: '#3b82f6', tension: 0.4 }]
         },
-        options: { maintainAspectRatio: false }
+        options: { plugins: { legend: { display: false } }, scales: { y: { display: false }, x: { display: false } } }
     });
 
-    actualizar();
-    setInterval(actualizar, 60000); // Actualiza cada minuto
+    fetchPrices();
+    setInterval(fetchPrices, 30000); // Actualizar cada 30 segundos
 </script>
 </body>
 </html>
