--- a/index.html
+++ b/index.html
@@ -2,86 +2,63 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Cardano Live Hub</title>
+    <title>Cardano Hub</title>
     <style>
-        :root { --bg: #050a18; --card: #111a2e; --accent: #4f46e5; --text: #e2e8f0; --price: #38bdf8; }
-        body { background: var(--bg); color: var(--text); font-family: sans-serif; padding: 20px; display: flex; justify-content: center; }
-        .container { width: 100%; max-width: 500px; text-align: center; }
-        .card { background: var(--card); padding: 25px; border-radius: 20px; border: 1px solid #1e293b; text-align: left; margin-bottom: 20px; box-shadow: 0 10px 20px rgba(0,0,0,0.3); }
-        .token-title { color: #94a3b8; font-size: 0.8rem; font-weight: bold; }
-        .price { font-size: 2.2rem; font-weight: bold; color: var(--price); margin: 5px 0; }
-        .usd-val { font-size: 1rem; color: #64748b; }
-        #ada-header { background: #1e293b; padding: 15px; border-radius: 15px; margin-bottom: 25px; color: #facc15; font-weight: bold; border: 1px dashed #475569; }
-        .status { font-size: 0.65rem; color: #475569; margin-top: 10px; }
+        body { background: #050a18; color: #e2e8f0; font-family: sans-serif; text-align: center; padding: 20px; }
+        .card { background: #111a2e; padding: 20px; border-radius: 15px; border: 1px solid #1e293b; margin: 15px auto; max-width: 400px; text-align: left; }
+        .price { font-size: 2rem; font-weight: bold; color: #38bdf8; }
+        .label { color: #94a3b8; font-size: 0.8rem; font-weight: bold; }
+        .usd { color: #64748b; font-size: 0.9rem; }
     </style>
 </head>
 <body>
 
-<div class="container">
-    <div id="ada-header">ADA Market: $<span id="ada-usd">...</span></div>
+    <h2>Cardano Live Assets</h2>
 
     <div class="card">
-        <div class="token-title">ORACLE / ADA</div>
+        <div class="label">ORACLE / ADA (Minswap)</div>
         <div id="price-oracle" class="price">... ₳</div>
-        <div id="usd-oracle" class="usd-val">$0.00 USD</div>
-        <div id="status-oracle" class="status">Iniciando...</div>
+        <div id="usd-oracle" class="usd">Cargando...</div>
     </div>
 
     <div class="card">
-        <div class="token-title">VLRM / ADA</div>
+        <div class="label">VLRM / ADA (VyFi)</div>
         <div id="price-vlrm" class="price">... ₳</div>
-        <div id="usd-vlrm" class="usd-val">$0.00 USD</div>
-        <div id="status-vlrm" class="status">Iniciando...</div>
+        <div id="usd-vlrm" class="usd">Cargando...</div>
     </div>
-</div>
 
 <script>
-    const ORACLE_ID = "328a18bac517630826a106bff1a55caf455de84cdba98416f8e093b27393c37310950f58596be5013b942d52accb931c2800cf132db36fb5fd7d71c4";
-    const VLRM_ID = "63efb704b7396890e4d9539d030c0e667739043add65c00f96c586c056616c6f72756d";
+    // IDs de los pools específicos en Cardano (GeckoTerminal)
+    const POOL_ORACLE = "cardano_minswap_be44e11400e2b4f2c5d6c8112316e6d7729114f85e4e69b5523a1a9e";
+    const POOL_VLRM = "cardano_vyfi_566ad937203b1ca4eb04c35588373b9e4a323984534e69b5523a1a9f";
 
-    // Usamos un proxy público para saltar el bloqueo CORS
-    const proxy = "https://api.allorigins.win/get?url=";
-
-    async function update() {
+    async function getData() {
         try {
-            // 1. Obtener ADA Price (vía Proxy para asegurar éxito)
-            const adaUrl = encodeURIComponent("https://api.coingecko.com/api/v3/simple/price?ids=cardano&vs_currencies=usd");
-            const adaRes = await fetch(proxy + adaUrl);
-            const adaData = await adaRes.json();
-            const adaPrice = JSON.parse(adaData.contents).cardano.usd;
-            document.getElementById('ada-usd').innerText = adaPrice.toFixed(3);
+            // 1. Obtener ORACLE
+            const resO = await fetch(`https://api.geckoterminal.com/api/v2/networks/cardano/pools/${POOL_ORACLE}`);
+            const dataO = await resO.json();
+            const oracleInAda = parseFloat(dataO.data.attributes.base_token_price_quote_token);
+            const oracleInUsd = parseFloat(dataO.data.attributes.base_token_price_usd);
+            
+            document.getElementById('price-oracle').innerText = oracleInAda.toFixed(3) + " ₳";
+            document.getElementById('usd-oracle').innerText = "$" + oracleInUsd.toFixed(4) + " USD";
 
-            // 2. Obtener Precios Tokens vía DexHunter (vía Proxy)
-            const hunterUrl = encodeURIComponent(`https://api.dexhunter.io/v1/price?units=${ORACLE_ID},${VLRM_ID}`);
-            const hunterRes = await fetch(proxy + hunterUrl);
-            const hunterDataRaw = await hunterRes.json();
-            const hunterData = JSON.parse(hunterDataRaw.contents);
+            // 2. Obtener VLRM
+            const resV = await fetch(`https://api.geckoterminal.com/api/v2/networks/cardano/pools/${POOL_VLRM}`);
+            const dataV = await resV.json();
+            const vlrmInAda = parseFloat(dataV.data.attributes.base_token_price_quote_token);
+            const vlrmInUsd = parseFloat(dataV.data.attributes.base_token_price_usd);
 
-            // Actualizar ORACLE
-            if (hunterData[ORACLE_ID]) {
-                const p = hunterData[ORACLE_ID];
-                document.getElementById('price-oracle').innerText = p.toFixed(3) + " ₳";
-                document.getElementById('usd-oracle').innerText = "$" + (p * adaPrice).toFixed(4) + " USD";
-                document.getElementById('status-oracle').innerText = "Conexión Segura OK";
-            }
-
-            // Actualizar VLRM
-            if (hunterData[VLRM_ID]) {
-                const p = hunterData[VLRM_ID];
-                document.getElementById('price-vlrm').innerText = p.toFixed(3) + " ₳";
-                document.getElementById('usd-vlrm').innerText = "$" + (p * adaPrice).toFixed(4) + " USD";
-                document.getElementById('status-vlrm').innerText = "Conexión Segura OK";
-            }
+            document.getElementById('price-vlrm').innerText = vlrmInAda.toFixed(3) + " ₳";
+            document.getElementById('usd-vlrm').innerText = "$" + vlrmInUsd.toFixed(4) + " USD";
 
         } catch (e) {
-            console.error(e);
-            document.getElementById('status-oracle').innerText = "Error de red. Reintentando con Proxy...";
+            console.log("Error de conexión");
         }
     }
 
-    update();
-    setInterval(update, 40000);
+    getData();
+    setInterval(getData, 30000);
 </script>
-
 </body>
 </html>
