--- a/index.html
+++ b/index.html
@@ -2,77 +2,51 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Cardano Assets Live</title>
+    <title>Cardano Live Hub</title>
     <style>
-        body { background: #0a0f1e; color: #f8fafc; font-family: sans-serif; text-align: center; padding: 40px 20px; }
-        .card { background: #161e35; padding: 30px; border-radius: 20px; border: 1px solid #2d3748; max-width: 400px; margin: 20px auto; box-shadow: 0 10px 25px rgba(0,0,0,0.4); }
-        .label { color: #94a3b8; font-size: 0.9rem; font-weight: bold; text-transform: uppercase; letter-spacing: 1px; }
-        .price { font-size: 2.5rem; font-weight: bold; color: #38bdf8; margin: 15px 0; }
-        .usd { color: #64748b; font-size: 1.1rem; }
-        #status { font-size: 0.7rem; color: #475569; margin-top: 20px; }
+        body { background: #050a18; color: #e2e8f0; font-family: sans-serif; padding: 20px; text-align: center; }
+        .container { max-width: 500px; margin: auto; }
+        .card { background: #111a2e; border-radius: 15px; padding: 10px; margin-bottom: 20px; border: 1px solid #1e293b; }
+        h2 { font-size: 1.2rem; color: #3b82f6; text-transform: uppercase; letter-spacing: 2px; }
+        .footer-note { font-size: 0.7rem; color: #475569; margin-top: 20px; }
     </style>
 </head>
 <body>
 
-    <h2>Cardano Ecosystem Monitor</h2>
+<div class="container">
+    <h2>Mi Panel Cardano</h2>
 
     <div class="card">
-        <div class="label">ORACLE / ADA</div>
-        <div id="price-oracle" class="price">... ₳</div>
-        <div id="usd-oracle" class="usd">Cargando...</div>
+        <script src="https://widgets.coingecko.com/gecko-coin-price-chart-widget.js"></script>
+        <gecko-coin-price-chart-widget  coin-id="cardano" currency="usd" height="300" locale="es"></gecko-coin-price-chart-widget>
     </div>
 
     <div class="card">
-        <div class="label">VLRM / ADA</div>
-        <div id="price-vlrm" class="price">... ₳</div>
-        <div id="usd-vlrm" class="usd">Cargando...</div>
+        <p style="font-size: 0.8rem; color: #94a3b8;">ORACLE / ADA (Live Feed)</p>
+        <iframe 
+            width="100%" 
+            height="400" 
+            src="https://www.geckoterminal.com/cardano/pools/cardano_minswap_be44e11400e2b4f2c5d6c8112316e6d7729114f85e4e69b5523a1a9e?embed=1&info=0&swaps=0" 
+            frameborder="0" 
+            allow="clipboard-write" 
+            allowfullscreen>
+        </iframe>
     </div>
 
-    <div id="status">Actualizando automáticamente cada 60 segundos...</div>
+    <div class="card">
+        <p style="font-size: 0.8rem; color: #94a3b8;">VLRM / ADA (Live Feed)</p>
+        <iframe 
+            width="100%" 
+            height="400" 
+            src="https://www.geckoterminal.com/cardano/pools/cardano_vyfi_566ad937203b1ca4eb04c35588373b9e4a323984534e69b5523a1a9f?embed=1&info=0&swaps=0" 
+            frameborder="0" 
+            allow="clipboard-write" 
+            allowfullscreen>
+        </iframe>
+    </div>
 
-<script>
-    // IDs de CoinGecko para estos tokens
-    // Nota: Usamos los IDs que CoinGecko asigna a estos proyectos
-    async function updateDashboard() {
-        try {
-            // 1. Obtener precio de ADA
-            const adaRes = await fetch("https://api.coingecko.com/api/v3/simple/price?ids=cardano&vs_currencies=usd");
-            const adaData = await adaRes.json();
-            const adaPriceUsd = adaData.cardano.usd;
+    <p class="footer-note">Datos actualizados vía CoinGecko & GeckoTerminal</p>
+</div>
 
-            // 2. Obtener precios de ORACLE y VLRM por su contrato en Cardano
-            // Usamos el endpoint de monedas por contrato
-            const oracleID = "oracle-token"; // ID común en CoinGecko
-            const vlrmID = "velorum";     // ID común en CoinGecko
-
-            const tokenRes = await fetch(`https://api.coingecko.com/api/v3/simple/price?ids=${oracleID},${vlrmID}&vs_currencies=usd`);
-            const tokenData = await tokenRes.json();
-
-            // Procesar ORACLE
-            if (tokenData[oracleID]) {
-                const oracleUsd = tokenData[oracleID].usd;
-                const oracleAda = oracleUsd / adaPriceUsd;
-                document.getElementById('price-oracle').innerText = oracleAda.toFixed(3) + " ₳";
-                document.getElementById('usd-oracle').innerText = "$" + oracleUsd.toFixed(4) + " USD";
-            }
-
-            // Procesar VLRM
-            if (tokenData[vlrmID]) {
-                const vlrmUsd = tokenData[vlrmID].usd;
-                const vlrmAda = vlrmUsd / adaPriceUsd;
-                document.getElementById('price-vlrm').innerText = vlrmAda.toFixed(3) + " ₳";
-                document.getElementById('usd-vlrm').innerText = "$" + vlrmUsd.toFixed(4) + " USD";
-            }
-
-        } catch (e) {
-            console.error("Error:", e);
-            // Si CoinGecko falla por IDs, intentamos un último método de respaldo
-            document.getElementById('usd-oracle').innerText = "Buscando fuente alternativa...";
-        }
-    }
-
-    updateDashboard();
-    setInterval(updateDashboard, 60000);
-</script>
 </body>
 </html>
