--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         .container { max-width: 600px; margin: auto; }
         .card { background: #111a2e; border-radius: 15px; padding: 15px; margin-bottom: 25px; border: 1px solid #1e293b; overflow: hidden; }
         h2 { font-size: 1.2rem; color: #3b82f6; text-transform: uppercase; letter-spacing: 2px; margin-bottom: 20px; }
-        .token-label { margin-bottom: 10px; display: block; color: #94a3b8; font-size: 0.8rem; font-weight: bold; }
+        .token-label { margin-bottom: 15px; display: block; color: #94a3b8; font-size: 0.8rem; font-weight: bold; }
+        iframe { background: white; border-radius: 10px; border: none; }
     </style>
 </head>
 <body>
@@ -23,22 +24,20 @@
     </div>
 
     <div class="card">
-        <span class="token-label">ORACLE / ADA (Live)</span>
+        <span class="token-label">ORACLE / ADA (TapTools Live)</span>
         <iframe 
-            src="https://www.dexhunter.io/embed/swap/328a18bac517630826a106bff1a55caf455de84cdba98416f8e093b27393c37310950f58596be5013b942d52accb931c2800cf132db36fb5fd7d71c4" 
+            src="https://www.taptools.io/charts/token/328a18bac517630826a106bff1a55caf455de84cdba98416f8e093b27393c37310950f58596be5013b942d52accb931c2800cf132db36fb5fd7d71c4?currency=ADA" 
             width="100%" 
-            height="500" 
-            style="border:none; border-radius:10px;">
+            height="500">
         </iframe>
     </div>
 
     <div class="card">
-        <span class="token-label">VLRM / ADA (Live)</span>
+        <span class="token-label">VLRM / ADA (TapTools Live)</span>
         <iframe 
-            src="https://www.dexhunter.io/embed/swap/63efb704b7396890e4d9539d030c0e667739043add65c00f96c586c056616c6f72756d" 
+            src="https://www.taptools.io/charts/token/63efb704b7396890e4d9539d030c0e667739043add65c00f96c586c056616c6f72756d?currency=ADA" 
             width="100%" 
-            height="500" 
-            style="border:none; border-radius:10px;">
+            height="500">
         </iframe>
     </div>
 
